--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1146,29 +1146,33 @@
       return xo;
     }
     async function getAbsLow3dBPointForSub(idx, start=10, end=320) {
-      // finds low -3dB point from mean SPL between 30-80hz
+      // finds low -3dB point from target SPL between 30-80hz
+      // assumes sub is leveled to TC using 30-80hz
       const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', idx);
       const subArray = response2array(response, 30, 80);
-      const subSPL = subArray.reduce((acc, val) => acc + val, 0) / subArray.length;
+      const targetArray = response2array(targetResponse, 30, 80);
+      const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = start;
       for (let i = 0; i < rpArray.length; i++) {
-        if ((rpArray[i] - subSPL) >= -3) { break; }
+        if ((rpArray[i] - targetSPL) >= -3) { break; }
         rolloff *= octave;
       }
       return Math.min(rolloff, end);
     }
     async function getAbsHigh3dBPointForSub(idx, start=10, end=320) {
-      // finds high -3dB point from mean SPL between 30-80hz
+      // finds high -3dB point from target SPL between 30-80hz
+      // assumes sub is leveled to TC using 30-80hz
       const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', idx);
       const subArray = response2array(response, 30, 80);
-      const subSPL = subArray.reduce((acc, val) => acc + val, 0) / subArray.length;
+      const targetArray = response2array(targetResponse, 30, 80);
+      const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = end;
       for (let i = rpArray.length - 1; i >= 0; i--) {
-        if ((rpArray[i] - subSPL) >= -3) { break; }
+        if ((rpArray[i] - targetSPL) >= -3) { break; }
         rolloff /= octave;
       }
       return Math.max(rolloff, start);
@@ -1592,9 +1596,9 @@
         let thisSubIdx = swIndices[i][0];
         const thisSubCmdId = measurements[thisSubIdx].title.slice(0, -1);
         const thisSubNumber = parseInt(thisSubCmdId.slice(-1));
-        console.log(`Aligning ${thisSubCmdId} to ${cmdIds}...`);
         startFreq = Math.min(startFreq, Math.round(await getAbsLow3dBPointForSub(thisSubIdx)));
         endFreq = Math.max(endFreq, Math.round(await getAbsHigh3dBPointForSub(thisSubIdx)));
+        console.log(`Aligning ${thisSubCmdId} to ${cmdIds} over ${startFreq}hz - ${endFreq}hz (aggregate -3dB points)...`);
         const [loDelay, hiDelay] = getDelayRangeOf(mSec[nSpeakers + thisSubNumber], nSpeakers + 1, nSpeakers + nSubs);
         const [isPossible, requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, thisSubIdx,
                                                                                   startFreq, endFreq, loDelay, hiDelay);
